@@ -522,6 +522,18 @@ $(GNUSTEP_OBJ_DIR)/%${OEXT}: %.rc
 	$(ECHO_COMPILING)windres $< $@$(END_ECHO)
 endif
 
+#
+# Special cygwin specific rules to compile Windows resource files (.rc files)
+# into object files. (this is the same rule as mingw32)
+#
+ifeq ($(findstring cygwin, $(GNUSTEP_TARGET_OS)), cygwin)
+# Add the .rc suffix on Windows.
+.SUFFIXES: .rc
+
+# A rule to generate a .o file from the .rc file.
+$(GNUSTEP_OBJ_DIR)/%${OEXT}: %.rc
+	$(ECHO_COMPILING)windres $< $@$(END_ECHO)
+endif
 
 # The following dummy rules are needed for performance - we need to
 # prevent make from spending time trying to compute how/if to rebuild
